<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Mobile WCS HRIS</string>
    <string name="app_name_label">Mobile WCS HR System</string>

    <!--dialog / menu-->
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="alert_no_connection">Your device is not connected. Please check your connection device</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="transaction_alert_confirmation">Are you sure you want to proceed this transaction</string>
    <string name="fill_in_the_blank">Please Fill in the Blank</string>
    <string name="alert_transaction_success">Transaction Success</string>
    <string name="menu_search_team_content">Search Team</string>
    <string name="problem_occured_alert">Problem occurred, please try again later</string>

    <!--navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--menu - navigation drawer-->
    <string name="dashboard_menu">Dashboard</string>
    <string name="team_menu">Team</string>
    <string name="approval_menu">Approval</string>
    <string name="request_menu">Request</string>
    <string name="activity_menu">Activity</string>
    <string name="absent_menu">Absent</string>
    <string name="confirmation_menu">Confirmation</string>
    <string name="notification_menu">Notification</string>
    <string name="status_menu">Status</string>
    <string name="setting_menu">Setting</string>
    <string name="logout_menu">Log Out</string>

    <!--global content-->
    <string name="empty_data">Empty Data</string>
    <string name="no_data_found">No Data Found</string>
    <string name="btn_plan">Plan</string>
    <string name="content_description_image">""</string>
    <string name="notes_bottom_sheet">Notes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--activity label-->
    <string name="profile_activity">Profile</string>
    <string name="dtl_notification_activity">Detail Notification</string>
    <string name="dtl_task_activity">Detail Activity</string>
    <string name="create_task_activity">Create Activity</string>
    <string name="search_team_activity">Search Team</string>
    <string name="confirm_task_activity">Confirm Activity</string>
    <string name="req_travel_hist_activity">Request Travel History</string>
    <string name="approval_travel_list_activity">Approval Travel Report</string>
    <string name="req_travel_activity">Request Travel</string>
    <string name="approval_travel_activity">Approval Travel</string>
    <string name="search_city_activity">Search City</string>
    <string name="list_destination_activity">List Destination</string>
    <string name="req_leave_hist_activity">Request Leave History</string>
    <string name="approval_leave_list_activity">Approval Leave Report</string>
    <string name="req_leave_activity">Request Leave</string>
    <string name="approval_leave_activity">Approval Leave</string>

    <!--permission form-->
    <string name="permission_button">IZINKAN</string>
    <string name="permission_rationale_settings_button_text">SETTING</string>
    <string name="all_permissions_denied_feedback">All permission is needed</string>
    <string name="permission_rationale_title">This permission is needed</string>
    <string name="permission_rationale_message">this permission needed to access all the feature</string>
    <string name="permission_content">To use all feature Mobile Wcs HR System, you must allow Mobile Wcs HR System to access the following feature on your android phone : </string>

    <!--splash content form-->
    <string name="retry_button">Retry</string>

    <!--login content form-->
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="forgot_password">Forgot Your Password ?</string>

    <!--profile content form-->
    <string name="position">Position</string>

    <!--Detail task content form-->
    <string name="charge_code">Charge Code</string>
    <string name="company_name">Company Name</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="into">To</string>
    <string name="contact_person">Contact Person</string>
    <string name="description">Description</string>
    <string name="no_solman">No Solman</string>
    <string name="project_manager">Project Manager</string>
    <string name="travel_business">Travel Business</string>
    <string name="not_travel_business">Non Travel Business</string>
    <string name="address">Address</string>

    <!--create task content form-->
    <string name="add_team">Add Team</string>
    <string name="save_and_generate">Save Generate</string>
    <string name="valid_from">Valid From</string>
    <string name="valid_into">Valid Into</string>

    <!--confirm task content form-->
    <string name="activity_hour">Act. Hour</string>
    <string name="activity_description">Action</string>
    <string name="confirm_save">Confirm</string>

    <!--detail req travel content form-->
    <string name="reject_save">Reject</string>
    <string name="delete_save">Delete</string>
    <string name="list_cities">List Cities</string>
    <string name="list_friends">List Friends</string>
    <string name="reason_dtlTravel">Reason</string>

    <!--req Travel content form-->
    <string name="depart_date">Depart Date</string>
    <string name="return_date">Return Date</string>
    <string name="hotel">Hotel</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="checkIn">Check In</string>
    <string name="checkOut">Check Out</string>
    <string name="multiple_destination">Multiple Trip</string>
    <string name="round_trip">Round Trip</string>
    <string name="one_way">One Way</string>
    <string name="add_destination">Add City</string>
    <string name="set_travel">Set Travel</string>
    <string name="transport">Trans and Acommodation</string>
    <string name="save">Save</string>
    <string name="appr_button">Approve</string>
    <string name="edit_travel">Edit Set Travel</string>

    <!--req leave content form-->
    <string name="date_from">Date From</string>
    <string name="date_into">Date To</string>
    <string name="time_from">Time From</string>
    <string name="time_into">Time To</string>
    <string name="time_label">Time</string>
    <string name="doc_no">Doc No</string>

    <!--benefit content form-->
    <string name="req_benefit_hist_activity">Request Benefit History</string>
    <string name="req_benefit_dtl_activity">Add Benefit Transaction</string>
    <string name="approval_benefit_list_activity">Approval Benefit Report</string>
    <string name="transDate">Txn Date</string>
    <string name="transCode">Txn Code</string>
    <string name="transName">Txn Name</string>
    <string name="acceptedPerson">Person</string>
    <string name="amountClaim">Amount CLaim</string>
    <string name="paidClaim">Paid CLaim</string>
    <string name="diagnose">Diagnose</string>
    <string name="benefitDescription">Description</string>
    <string name="inputTransDate">Transaction Date</string>
    <string name="currency">Currency</string>

</resources>
