<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.wcs.mobilehris.feature.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundApp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ProgressBar
                android:id="@+id/pb_login"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="@{viewModel.isVisibleProgress ? View.VISIBLE : View.INVISIBLE}"
                android:layout_alignParentTop="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/pb_login">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign In"
                    android:textSize="20sp"
                    android:layout_marginTop="@dimen/space_14"
                    android:layout_gravity="center_horizontal" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_login_uid"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_fields_height"
                    android:layout_marginHorizontal="@dimen/space_08"
                    android:layout_marginTop="@dimen/space_08"
                    app:boxCornerRadiusBottomEnd="@dimen/text_fields_radius"
                    app:boxCornerRadiusBottomStart="@dimen/text_fields_radius"
                    app:boxCornerRadiusTopEnd="@dimen/text_fields_radius"
                    app:boxCornerRadiusTopStart="@dimen/text_fields_radius"
                    app:boxStrokeColor="@color/text_fields_box_color"
                    app:boxStrokeWidth="@dimen/text_fields_box_width"
                    app:hintTextColor="@color/text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_login_uid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="0123456789"
                        android:gravity="center_vertical"
                        android:hint="@string/user_id"
                        android:imeOptions="actionNext"
                        android:inputType="numberPassword"
                        android:maxLines="1"
                        android:paddingStart="@dimen/space_08"
                        android:paddingEnd="@dimen/space_08"
                        android:text="@={viewModel.stUserId}"
                        android:textColor="@color/text_color"
                        android:textColorHighlight="@color/text_color"
                        android:textSize="@dimen/text_fields_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_login_pass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_fields_height"
                    android:layout_marginHorizontal="@dimen/space_08"
                    android:layout_marginTop="@dimen/space_08"
                    app:boxCornerRadiusBottomEnd="@dimen/text_fields_radius"
                    app:boxCornerRadiusBottomStart="@dimen/text_fields_radius"
                    app:boxCornerRadiusTopEnd="@dimen/text_fields_radius"
                    app:boxCornerRadiusTopStart="@dimen/text_fields_radius"
                    app:boxStrokeColor="@color/text_fields_box_color"
                    app:boxStrokeWidth="@dimen/text_fields_box_width"
                    app:hintTextColor="@color/text_color"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_login_pass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="@dimen/space_08"
                        android:paddingEnd="@dimen/space_08"
                        android:text="@={viewModel.stPassword}"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_fields_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login_log_in"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="@dimen/space_08"
                    android:layout_marginTop="@dimen/space_08"
                    android:enabled="@{!viewModel.isVisibleProgress}"
                    android:onClick="@{() -> viewModel.getLogin()}"
                    android:stateListAnimator="@null"
                    android:text="@string/login"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:backgroundTint="@color/button_color"
                    app:cornerRadius="@dimen/button_radius" />

                <TextView
                    android:id="@+id/txt_login_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/space_08"
                    android:layout_marginTop="@dimen/space_06"
                    android:onClick="@{() -> viewModel.intentForgotPass()}"
                    android:text="@string/forgot_password"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_login_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_05"
                android:text="@={viewModel.stVersion}"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/text_color" />

        </RelativeLayout>

    </ScrollView>

</layout>
